<?xml version="1.0"?>
<package format="2">
  <name>control_force_provider</name>
  <version>0.0.1</version>
  <description>A provider of force control commands for force based and RCM constrained robot control.</description>

  <maintainer email="notmyrealemail@gmail.de">Martin Lelis</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>ryml</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>roscpp</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
