<?xml version="1.0"?>
<package format="2">
  <name>control_force_provider</name>
  <version>0.0.1</version>
  <description>A provider of force control commands for force based and RCM constrained robot control.</description>

  <maintainer email="notmyrealemail@gmail.de">Martin Lelis</maintainer>

  <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>eigen</depend>
    <depend>ryml</depend>
    <depend>roscpp</depend>
    <depend>geometry_msgs</depend>
    <depend>eigen_conversions</depend>
    <depend>rviz_visual_tools</depend>
    <depend>torch</depend>
    <depend>control_force_provider_msgs</depend>
    <exec_depend>rospy</exec_depend>

</package>
