<?xml version="1.0"?>
<package format="2">
  <name>control_force_provider_msgs</name>
  <version>0.0.1</version>
  <description>Messages and services for the control force provider.</description>

  <maintainer email="notmyrealemail@gmail.de">Martin Lelis</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
